k8s/adm-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: trend-adm
  namespace: trend

spec:
  replicas: 1

  selector:
    matchLabels:
      app: trend-adm

  template:
    metadata:
      labels:
        app: trend-adm

    spec:
      hostAliases:
      - ip: 10.111.129.2
        hostnames:
        - "auth.local"
        - "trend.local"
        - "adm.local"
      containers:
      - name: trend-adm

        image: alexsuf/trend-adm

        imagePullPolicy: Never

        ports:
        - containerPort: 5000
