k8s/jupyter-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: jupyter-notebook
  namespace: trend

spec:
  replicas: 1

  selector:
    matchLabels:
      app: jupyter-notebook

  template:
    metadata:
      labels:
        app: jupyter-notebook

    spec:
      securityContext:
        fsGroup: 100
      hostAliases:
      - ip: 10.111.129.2
        hostnames:
        - "auth.local"
        - "trend.local"
        - "adm.local"
      - ip: 10.109.173.27
        hostnames:
        - "search.local"
      containers:
      - name: jupyter-notebook

        securityContext:
          runAsUser: 100
          runAsGroup: 100

        image: alexsuf/jupyter

        imagePullPolicy: Never

        ports:
        - containerPort: 8888

        volumeMounts:
        - name: jupyter-work
          mountPath: /home/jovyan/work

      volumes:
      - name: jupyter-work
        emptyDir: {}
