k8s/adm-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: trend-adm
  namespace: trend

spec:
  selector:
    app: trend-adm

  ports:
  - port: 80
    targetPort: 5000

  type: ClusterIP
