k8s/flask-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: trend-research
  namespace: trend

spec:
  selector:
    app: trend-research

  ports:
  - port: 80
    targetPort: 5000
    nodePort: 30001

  type: NodePort
