k8s/keycloak-postgres-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: postgres
  namespace: keycloak

spec:
  selector:
    app: postgres

  ports:
  - port: 5432
    targetPort: 5432
    nodePort: 30050

  type: NodePort
