k8s/keycloak-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: keycloak
  namespace: keycloak

spec:
  selector:
    app: keycloak

  ports:
  - port: 80
    targetPort: 8080
    nodePort: 30003

  type: NodePort
