k8s/postgres-nodeport.yaml
apiVersion: v1
kind: Service

metadata:
  name: postgres-nodeport
  namespace: keycloak

spec:
  selector:
    app: postgres

  ports:
  - port: 5432
    targetPort: 5432
    nodePort: 30432

  type: NodePort
