k8s/adm-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: trend-adm
  namespace: trend

spec:
  ingressClassName: nginx

  rules:
  - host: adm.trend-app

    http:
      paths:
      - path: /
        pathType: Prefix

        backend:
          service:
            name: trend-adm

            port:
              number: 80
