k8s/jupyter-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: jupyter-notebook
  namespace: trend

spec:
  ingressClassName: nginx

  rules:
  - host: jupyter.local

    http:
      paths:
      - path: /
        pathType: Prefix

        backend:
          service:
            name: jupyter-notebook

            port:
              number: 80
