k8s/keycloak-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: keycloak
  namespace: keycloak

spec:
  ingressClassName: nginx

  rules:
  - host: auth.trend-app

    http:
      paths:
      - path: /
        pathType: Prefix

        backend:
          service:
            name: keycloak

            port:
              number: 80
